--- a/Css/Style.css
+++ b/Css/Style.css
@@ -1,4 +1,6 @@
 body {
+  background-color: black;
+  color: red;
   height: 100vh;
   margin: 0;
   overflow: hidden;
@@ -143,15 +145,15 @@ body {
 
 @keyframes side-content-img {
   0% {
-    transform: translatex(600px);
+    transform: translateX(600px);
   }
   100% {
-    transform: translatex(0px);
+    transform: translateX(0px);
   }
 }
 
 .side-content div {
-  background-color: rgb(38, 38, 163);
+  background-color: red;
   grid-column: 4 / 7;
   grid-row: 1 / 2;
   height: 100%;
@@ -174,9 +176,11 @@ body {
 }
 
 .footer div {
-  background-color: blue;
+  background-color: red;
   width: 130px;
   height: 50%;
+  border-radius: 20px 20px 0 0;
+  justify-content: center;
 }
 
 .footer div img:hover {
@@ -260,4 +264,86 @@ body {
   50% {
     transform: scale(1);
   }
+}
+
+.hidden {
+  display: none !important;
+}
+
+.visible {
+  display: grid !important;
+}
+
+.modal {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  z-index: 4;
+
+  display: grid;
+  place-items: center;
+}
+
+.modal_content {
+  background-color: red;
+  width: 50%;
+  height: 50%;
+  display: grid;
+  place-items: center;
+}
+
+.slider {
+  width: 300px;
+  height: 200px;
+  transform-style: preserve-3d;
+}
+
+.cards {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.card {
+  background-color: yellow;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  transition: transform 0.5s ease;
+  cursor: pointer;
+  display: grid;
+  place-items: center;
+  width: 50%;
+  height: 100%;
+}
+
+label img {
+  width: 75%;
+  height: 75%;
+}
+
+#radio-1:checked ~ .cards #card-1,
+#radio-2:checked ~ .cards #card-2,
+#radio-3:checked ~ .cards #card-3 {
+  transform: translateX(0) scale(1);
+  opacity: 1;
+  z-index: 1;
+}
+
+#radio-1:checked ~ .cards #card-2,
+#radio-2:checked ~ .cards #card-3,
+#radio-3:checked ~ .cards #card-1 {
+  transform: translateX(40%) scale(0.8);
+  opacity: 0.5;
+  z-index: 0;
+}
+
+#radio-1:checked ~ .cards #card-3,
+#radio-2:checked ~ .cards #card-1,
+#radio-3:checked ~ .cards #card-2 {
+  transform: translateX(-40%) scale(0.8);
+  opacity: 0.5;
+  z-index: 0;
 }
